# synapwork

./: .gitignore  CMakeLists.txt  README.md
synapwork/: CMakeLists.txt
synapwork/containers/: CMakeLists.txt  linkedlist.h
synapwork/core/: CMakeLists.txt  sn_allocations.cpp  sn_devbuffer.hpp  sn_devices.hpp  sn_functions.h  sn_functions.hpp  sn_ndarray.c  sn_ndarray.cpp  sn_ndarray.h  sn_ndarray.hpp  sn_types.cpp  sn_types.h
synapwork/test/: CMakeLists.txt  test_ndarray.c  test_ndarray.cpp
synapworkcpp/: synapworkcpp.cmake
synapworkcpp/core/: core.cmake  sn_devbuffer.hpp  sn_device.cpp  sn_device.hpp  sn_devices.cpp  sn_devices.hpp  sn_functions.hpp  sn_macros.h  sn_ndarray.cpp  sn_ndarray.hpp  sn_types.cpp  sn_types.hpp
synapworkcpp/core/cpu/: cpu.cmake  cpu_buffer.cpp  sn_cpu.cpp  sn_cpu.hpp  sn_cpu_buffer.cpp
synapworkcpp/core/cuda/: cuda.cmake  cuda_buffer.cpp  sn_cuda.cpp  sn_cuda.hpp  sn_cuda_buffer.cpp
synapworkcpp/cpy/: cpy.cmake
synapworkcpp/utils/: sn_autorun.cpp  sn_autorun.hpp  utils.cmake
synetse/: CMakeLists.txt
synetse/core/: CMakeLists.txt  ndarray.c  ndarray.h
synetse/cpy/: CMakeLists.txt
synetse/test/: CMakeLists.txt  ndarray_test.c  test.c
testcpp/: test.cpp  test_ndarray.cpp  test_sn.cpp  test_sn_devices.cpp  test_sn_ndarray.cpp  test_sn_types.cpp  test_types.cpp  testcpp.cmake
